<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login"
            android:text="@string/tv_login"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--EMAIL-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/Et_email"
                android:hint="@string/Et_email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </com.google.android.material.textfield.TextInputLayout>

        <!--PASSWORD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/Et_Password"
                android:hint="@string/Et_Password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--INGRESAR-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_iniciar_sesion"
            android:text="@string/Btn_iniciar_sesion"
            android:layout_marginTop="15dp"
            android:textAllCaps="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

        <!--REGISTRAR USUARIO-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_registrarme"
            android:text="@string/Btn_registrarme"
            android:textAllCaps="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>